--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "postbuild": "next-sitemap", 
     "lint": "next lint"
   },
   "dependencies": {
@@ -19,6 +20,7 @@
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
+    "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
